force-app/main/default/objects/Seasonal_Variety_Detail__c/Seasonal_Variety_Detail__c.object-meta.xml
<CustomObject>
    <description>This object will serve as a holder for any information that might change over season.</description>
    <label>Seasonal Variety Detail</label>
    <nameField>
        <label>Seasonal Variety Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Seasonal Variety Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>