force-app/main/default/objects/Seasonal_Variety_Detail__c/fields/CENTRAL_CORNBELT__c.field-meta.xml
<CustomField>
    <fullName>CENTRAL_CORNBELT__c</fullName>
    <label>CENTRAL CORNBELT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>