force-app/main/default/objects/Seasonal_Variety_Detail__c/fields/EAST_COAST__c.field-meta.xml
<CustomField>
    <fullName>EAST_COAST__c</fullName>
    <label>EAST COAST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>