force-app/main/default/objects/Seasonal_Variety_Detail__c/fields/EASTERN_CORNBELT__c.field-meta.xml
<CustomField>
    <fullName>EASTERN_CORNBELT__c</fullName>
    <label>EASTERN CORNBELT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>