force-app/main/default/objects/Seasonal_Variety_Detail__c/fields/GREAT_LAKES__c.field-meta.xml
<CustomField>
    <fullName>GREAT_LAKES__c</fullName>
    <label>GREAT LAKES</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>