force-app/main/default/objects/Seasonal_Variety_Detail__c/fields/Key_Variety_Status__c.field-meta.xml
<CustomField>
    <fullName>Key_Variety_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if the variety is an important one to track this season</description>
    <inlineHelpText>Checked if the variety is an important one to track this season</inlineHelpText>
    <label>Key Variety Status</label>
    <type>Checkbox</type>
</CustomField>