force-app/main/default/objects/Seasonal_Variety_Detail__c/fields/MIDSOUTH__c.field-meta.xml
<CustomField>
    <fullName>MIDSOUTH__c</fullName>
    <label>MIDSOUTH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>