force-app/main/default/objects/Seasonal_Variety_Detail__c/fields/MINDAKCA__c.field-meta.xml
<CustomField>
    <fullName>MINDAKCA__c</fullName>
    <label>MINDAKCA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>