force-app/main/default/objects/Seasonal_Variety_Detail__c/fields/Overall__c.field-meta.xml
<CustomField>
    <fullName>Overall__c</fullName>
    <label>Overall Performance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>