force-app/main/default/objects/Seasonal_Variety_Detail__c/fields/Spec_Production_Status__c.field-meta.xml
<CustomField>
    <fullName>Spec_Production_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked If the variety will have US production for the following season&apos;s supply</description>
    <inlineHelpText>Checked If the variety will have US production for the following season&apos;s supply</inlineHelpText>
    <label>Spec Production Status</label>
    <type>Checkbox</type>
</CustomField>