force-app/main/default/objects/Seasonal_Variety_Detail__c/fields/Variety__c.field-meta.xml
<CustomField>
    <fullName>Variety__c</fullName>
    <label>Variety</label>
    <referenceTo>Variedad__c</referenceTo>
    <relationshipLabel>Seasonal Variety Details</relationshipLabel>
    <relationshipName>Seasonal_Variety_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>