force-app/main/default/objects/Seasonal_Variety_Detail__c/fields/WEST__c.field-meta.xml
<CustomField>
    <fullName>WEST__c</fullName>
    <label>WEST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>